@@ -1,2 +1,18 @@
 
-news, ordered in time.
+
+<dl>
+  <dt>
+    Thu Apr 17 2003
+  </dt>
+  <dd>
+    New <a
+	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond_1.6.9-1_i386.deb">1.6.9
+      package for Debian/woody</a> contributed by Laura Conrad.
+
+    <dt>Thu Apr 8 2003</dt>
+  <dd>
+    <img align="right" src="about/news/timesig.png">
+    
+    Example file added to distribution: double time sigs
+</dl>
+<p align="right"><a href="oldnews.html">old news</a></p>
