@@ -1,10 +1,3 @@
-<h2>Under construction</h2>
-This site is under construction. The old websites can still be
-accessed: go <a href="http://lilypond.org/stable">for the stable
-release</a>
-and <a href="http://lilypond.org/development">for the development release</a>.
-<p>
-
 <h1>LilyPond -- printing music</h1>
 
 <blockquote><em>
@@ -13,13 +6,32 @@ typesetting looks much nicer now!</em>
 </blockquote>
 
 <p>
-<p align=right><a href="about/">more about lilypond</a></p>
+<p align="right"><a href="about/">more about lilypond</a></p>
 
-<img align="right" src="about/news/timesig.png">
+<dl>
+  <dt>
+    Thu Apr 17 2003
+  </dt>
+  <dd>
+    New <a
+	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond_1.6.9-1_i386.deb">1.6.9
+      package for Debian/woody</a> contributed by Laura Conrad.
+    
+    <dt>Thu Apr 8 2003</dt>
+  <dd>
+    <img align="right" src="about/news/timesig.png">
+    Example file added to distribution: double time sigs
+</dl>
+
+<!-- why does this not flush right? !-->
+<p align="right"><a href="about/news/">more news</a></p>
+  
+<p>
+  <blockquote><em> The old websites can still be accessed: go to
+      <a href="http://lilypond.org/stable">the stable release</a><p> or to
+	<a href="http://lilypond.org/development">the development
+release</a>.
+</em></blockquote>
 <p>
 
-Example file added to distribution: double time sigs
-
-
-<p align=right><a href="about/news/">more news</a></p>
 
