@@ -1,5 +1,7 @@
 2003-04-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/index.html: 
+	* site/about/news/index.html: 
 	* site/download/debian.html: Add link to Laura's package.
 
 2003-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>
